examples/test/testpolicy63.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy63
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key19: value1
      key43: value27
      key36: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value20
          key11: value11
          key22: value11
      podSelector:
        matchLabels:
          key41: value8
